Add remove test api with ui feature
